--- a/tex/biblio.bib
+++ b/tex/biblio.bib
@@ -56,4 +56,13 @@
 	pages={3541-3544},
 	keywords={Fourier transforms;Signal processing;Least squares methods;Frequency estimation;Least squares approximation;Signal analysis;Time varying systems;Time frequency analysis;Speech enhancement;Blind source separation;inverse short-time Fourier transform;timefrequency analysis;least squares methods},
 	doi={10.1109/ICASSP.2008.4518416}}
+	
+@book{FFTbook,
+	author = {Brigham, E. Oran},
+	title = {The fast Fourier transform and its applications},
+	year = {1988},
+	isbn = {0133075052},
+	publisher = {Prentice-Hall, Inc.},
+	address = {USA}
+}
 
