--- a/tex/fft.tex
+++ b/tex/fft.tex
@@ -1,6 +1,38 @@
 \documentclass[class=article,crop=false]{standalone}
 \usepackage{pacco}
 \begin{document}
+\section{The Fast Fourier Transform}
+\subsection{Theoretical framework}
+\subsubsection{The Fourier Transform}
+The Fourier integral is defined\footnote{\cite{FFTbook}, p.9} as
+\begin{equation}\label{ft}
+F(\omega)=\int_{-\infty}^{\infty}f(x)e^{-i2\pi\omega x}\dif x.
+\end{equation}
+If the integral exists for every value of the parameter $\omega$, then Eq.\ref{ft} defines $F(\omega)$, the \enf{Fourier Transform} of $f(x)$. In most cases\footnote{\cite{FFTbook}, \textit{ibidem}} (including the application of our discussion), $f(x)$ is a function of the variable time and $F(\omega)$ is a function of the variable frequency. In general, the Fourier Transform is a complex quantity
+\begin{equation}
+	F(\omega)=R(\omega)+iI(\omega)=|F(\omega)|e^{i\theta(\omega)}
+\end{equation}
+with;
+\begin{itemize}
+	\item $R(\omega)$ is the real part of the Fourier transform;
+	\item $I(\omega)$ is the imaginary part;
+	\item $|F(\omega)|$ is the \textit{amplitude} or \textit{Fourier spectrum} og $f(x)$ given by $\sqrt{R^2(\omega)+I^2(\omega)}$;
+	\item $\theta(\omega)$ is the \textit{phase angle of the Fourier transform} and is given by $tan^{-1}\left[\frac{I(\omega)}{R(\omega)}\right]$.
+\end{itemize}
+In the same fashion we can define the \enf{inverse Fourier transform} as:
+\begin{equation}\label{ivft}
+	f(x)=\int_{-\infty}^{\infty}F(\omega)e^{i2\pi\omega x}\dif \omega.
+\end{equation}
+Eq.\ref{ivft} allows the determination of a function in the time domain from its Fourier transform. If the functions $f(x)$ and $F(\omega)$ are related by Eqs. \ref{ft} and \ref{ivft}, then the two function are called a \enf{Fourier transform pair}.\\
+The Fourier transform is defined on continuous functions, but since we will be dealing with sampled (and therefore continuous) quantities, we will need to turn to the discrete version fo the Fourier transform, the \enf{Discrete Fourier transform (DFT)}\footnote{\cite{FFTbook}, chap. 6.3 provides more formal details about the connection between Fourier transform and discrete Fourer transform and its derivation.}. The DFT is defined as:
+\begin{equation}
+	X_k=\sum_{k=0}^{N-1}x_ne^{-i\frac{2\pi}{N}kn}\qquad \text{for }k=0,1,2,\ldots,N-1
+\end{equation}
+or, commonly
+\begin{equation}
+	X_k=\sum_{k=0}^{N-1}x_nW_{N}^{kn}\qquad\text{with }W_n=e^{-i\frac{2\pi}{N}}.
+\end{equation}
+It is worth noting that $W_n^k$ for $k=0,\ldots,N-1$ are the \textit{Nth roots of unity}
 \subsection{A possible step further: Iterative Fast Fourier Transform Algorithm}
 If we could arrange from the start the input components in a order that resembles the one reached by the deepest level of recursion (that is, when $N=1$), we could create a non-recursive approach for the FFT algorithm that works "bottom up". The idea behind this algorithm is the following:
 \begin{enumerate}
@@ -20,7 +52,7 @@ Final index &0 &4 &2 &6 &1 &5 &2 &7\\
 \hline
 Original index (binary) &000 &001 &010 &011 &100 &101 &110 &111\\
 \hline
-Final index (binary) &000 &100 &010 &110 &001 &101 &110 &111\\
+Final index (binary) &000 &100 &010 &110 &001 &101 &011 &111\\
 \hline
 \end{tabular}\end{center}
 We can see that the final index is the \textit{bit-reversed}\footnote{\cite{introalgo} p. 913} version of the original index: that is, to obtain the final index we must reverse the order of the bits that express the original index.
