--- a/tex/biblio.bib
+++ b/tex/biblio.bib
@@ -6,7 +6,7 @@
 }
 @article{family,
 	author={Rockmore, D.N.},
-	journal={Computing in Science & Engineering}, 
+	journal={Computing in Science and Engineering}, 
 	title={The FFT: an algorithm the whole family can use}, 
 	year={2000},
 	volume={2},
@@ -15,15 +15,21 @@
 	keywords={Discrete Fourier transforms;Equations;Signal processing algorithms;Fast Fourier transforms;Mathematics;Orbital calculations;Convolution;Information processing;Internet;Modems},
 	doi={10.1109/5992.814659}}
 	
-	@inproceedings{librosa,
-		author = {McFee, Brian and Raffel, Colin and Liang, Dawen and Ellis, Daniel and Mcvicar, Matt and Battenberg, Eric and Nieto, Oriol},
-		year = {2015},
-		month = {01},
-		pages = {18-24},
-		title = {librosa: Audio and Music Signal Analysis in Python},
-		doi = {10.25080/Majora-7b98e3ed-003}
-	}
-
+@inproceedings{librosa,
+	author = {McFee, Brian and Raffel, Colin and Liang, Dawen and Ellis, Daniel and Mcvicar, Matt and Battenberg, Eric and Nieto, Oriol},
+	year = {2015},
+	month = {01},
+	pages = {18-24},
+	title = {librosa: Audio and Music Signal Analysis in Python},
+	doi = {10.25080/Majora-7b98e3ed-003}
+}
+@inproceedings{fftfunprofit,
+	title={Fast Fourier Transforms: for fun and profit},
+	author={Morven Gentleman, William and Van der Sande, Guy},
+	booktitle={AFIPS '66 (Fall)},
+	year={1966},
+	url={https://api.semanticscholar.org/CorpusID:207170956}
+}
 @article{nokiaphvcd,
 	author={Flanagan, J. L. and Golden, R. M.},
 	journal={The Bell System Technical Journal}, 
@@ -62,6 +68,14 @@
 	title = {The fast Fourier transform and its applications},
 	year = {1988},
 	isbn = {0133075052},
+	publisher = {Prentice-Hall, Inc.},
+	address = {USA}
+}
+@book{dspprinciples,
+	author = {Proakis, John G. and Manolakis, Dimitris G.},
+	title = {Digital signal processing (3rd ed.): principles, algorithms, and applications},
+	year = {1996},
+	isbn = {0133737624},
 	publisher = {Prentice-Hall, Inc.},
 	address = {USA}
 }
