--- a/tex/pacco.sty
+++ b/tex/pacco.sty
@@ -70,7 +70,7 @@
 	}
 
 	
-	\newminted{python}{mathescape, linenos, numbersep=5pt, frame=single, breaklines,bgcolor=gray!9, fontfamily=courier,python3,rulecolor=Emerald,numbersep=5pt,label=Python,xleftmargin=0pt}
+	\newminted{python}{mathescape, linenos, numbersep=5pt, frame=single, breaklines,bgcolor=gray!9, fontfamily=courier,python3,rulecolor=red!39!black,numbersep=5pt,label=Python,xleftmargin=0pt}
 		\newenvironment{py}{\VerbatimEnvironment\begin{pythoncode}}{\end{pythoncode}}
 			
 	\newcounter{defi}
@@ -289,12 +289,12 @@
 							\newtcbtheorem[number within=section]{exa}{Example}{
 								enhanced, 
 								frame empty, breakable,
-								colframe=white, coltitle=black, colbacktitle=Dandelion!24,
+								colframe=white, coltitle=black, colbacktitle=Red!24,
 								colback=white,
 								borderline={0.5mm}{0mm}{white},
-								borderline west={1mm}{0mm}{Dandelion!45},
+								borderline west={1mm}{0mm}{Red!45},
 								attach boxed title to top left,  
-								boxed title style={boxrule=0.5mm, rounded corners,drop fuzzy shadow=gray, colframe=Dandelion!24},
+								boxed title style={boxrule=0.5mm,drop fuzzy shadow=gray, colframe=Dandelion!24},
 								separator sign={:},
 								description formatter=\newline,
 								theorem hanging indent/.try=0pt,
