--- a/tex/biblio.bib
+++ b/tex/biblio.bib
@@ -80,3 +80,71 @@
 	address = {USA}
 }
 
+@article{         numpy,
+	title         = {Array programming with {NumPy}},
+	author        = {Charles R. Harris and K. Jarrod Millman and St{\'{e}}fan J.
+	van der Walt and Ralf Gommers and Pauli Virtanen and David
+	Cournapeau and Eric Wieser and Julian Taylor and Sebastian
+	Berg and Nathaniel J. Smith and Robert Kern and Matti Picus
+	and Stephan Hoyer and Marten H. van Kerkwijk and Matthew
+	Brett and Allan Haldane and Jaime Fern{\'{a}}ndez del
+	R{\'{i}}o and Mark Wiebe and Pearu Peterson and Pierre
+	G{\'{e}}rard-Marchant and Kevin Sheppard and Tyler Reddy and
+	Warren Weckesser and Hameer Abbasi and Christoph Gohlke and
+	Travis E. Oliphant},
+	year          = {2020},
+	month         = sep,
+	journal       = {Nature},
+	volume        = {585},
+	number        = {7825},
+	pages         = {357--362},
+	doi           = {10.1038/s41586-020-2649-2},
+	publisher     = {Springer Science and Business Media {LLC}},
+	url           = {https://doi.org/10.1038/s41586-020-2649-2}
+}
+
+@ARTICLE {bestalgos,
+	author = {J. Dongarra and F. Sullivan},
+	journal = {Computing in Science \& Engineering},
+	title = {Guest Editors Introduction to the top 10 algorithms},
+	year = {2000},
+	volume = {2},
+	number = {01},
+	issn = {1558-366X},
+	pages = {22-23},
+	abstract = {Presents the introductory Guest Editorial for this issue of the publication.},
+	keywords = {linear algebra;history;eigenvalues and eigenfunctions;linear programming;large-scale systems;equations;programmable control;matrix decomposition;sparse matrices;art},
+	doi = {10.1109/MCISE.2000.814652},
+	publisher = {IEEE Computer Society},
+	address = {Los Alamitos, CA, USA},
+	month = {jan}
+}
+@ARTICLE{gauss,
+	
+	author={Heideman, M. and Johnson, D. and Burrus, C.},
+	
+	journal={IEEE ASSP Magazine}, 
+	
+	title={Gauss and the history of the fast fourier transform}, 
+	
+	year={1984},
+	
+	volume={1},
+	
+	number={4},
+	
+	pages={14-21},
+	
+	keywords={Gaussian processes;History;Fast Fourier transforms},
+	
+	doi={10.1109/MASSP.1984.1162257}}
+
+@article{cooleytukey,
+	title={An algorithm for the machine calculation of complex Fourier series},
+	author={James W. Cooley and John W. Tukey},
+	journal={Mathematics of Computation},
+	year={1965},
+	volume={19},
+	pages={297-301},
+	url={https://api.semanticscholar.org/CorpusID:121744946}
+}
