--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1,6 +1,12 @@
 \documentclass{article}
 \usepackage{pacco}
 \begin{document}
+	\title{Bitch Shifting}
+	\author{kotatsu}
+	\date{}
+	\maketitle
+	\tableofcontents
 \input{fft}
+\listofalgorithms
 \printbibliography
 \end{document}
